--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,3 +12,5 @@ assembly_info:
   assembly_version: "1.0.{build}"
   assembly_file_version: "{version}"
   assembly_informational_version: "{version}"
+before_build:
+  - cmd: nuget restore
