--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,3 +15,10 @@ assembly_info:
 before_build:
   - cmd: nuget restore
 configuration: ReleaseCI
+artifacts:
+  - NuGetPackage
+deploy:
+  provider: NuGet
+  api_key:
+    secure: ggnvR8rEMLbVOYOAMBXmjD+ohPaPoCcMwwEPdQvMbpjt+HEHWFxZYNGXs+O1x8tD
+  artifact: /.*\.nupkg/
