--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,8 +15,8 @@ assembly_info:
 before_build:
   - cmd: nuget restore
 configuration: ReleaseCI
-artifacts:
-  - NuGetPackage
+artifacts: 
+  - type: NuGetPackage
 deploy:
   provider: NuGet
   api_key:
