--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,8 @@ before_build:
   - cmd: nuget restore
 configuration: ReleaseCI
 artifacts: 
-  - type: NuGetPackage
+  - path: '**\*.nupkg'
+    type: NuGetPackage
 deploy:
   provider: NuGet
   api_key:
