--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,10 +16,10 @@ before_build:
   - cmd: nuget restore
 configuration: ReleaseCI
 artifacts: 
-  - path: '**\*.nupkg'
+  - path: 'bin\ReleaseCI\StringAsSql.*.nupkg'
     type: NuGetPackage
 deploy:
   provider: NuGet
   api_key:
     secure: ggnvR8rEMLbVOYOAMBXmjD+ohPaPoCcMwwEPdQvMbpjt+HEHWFxZYNGXs+O1x8tD
-  artifact: /.*\.nupkg/
+  artifact: 'bin\ReleaseCI\StringAsSql.*.nupkg'
