--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,4 +22,4 @@ deploy:
   provider: NuGet
   api_key:
     secure: ggnvR8rEMLbVOYOAMBXmjD+ohPaPoCcMwwEPdQvMbpjt+HEHWFxZYNGXs+O1x8tD
-  artifact: 'StringAsSql\bin\$(configuration)\*.nupkg'
+  artifact: /.*\.nupkg/
