Allow more types as parameter objects; fixes #2

--- a/StringAsSql/StringAsSql.csproj
+++ b/StringAsSql/StringAsSql.csproj
@@ -16,6 +16,7 @@
     <PackageTags>ado.net sql oledb</PackageTags>
     <PackageReleaseNotes>Initial release</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
