--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,14 @@ assembly_info:
   assembly_version: "1.0.{build}"
   assembly_file_version: "{version}"
   assembly_informational_version: "{version}"
+dotnet_csproj:
+  patch: true
+  file: '**\*.csproj'
+  version: '{version}'
+  package_version: '{version}'
+  assembly_version: '{version}'
+  file_version: '{version}'
+  informational_version: '{version}'
 before_build:
   - cmd: nuget restore
 configuration: ReleaseCI
